--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-html {
-    margin:    0 auto;
+body, html{
+    margin:0;
+    padding:0;
 }
-
 body {
-  margin: 0;
+    margin: 0;
+     min-width: fit-content;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
